--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/AddExpensePage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/AddExpensePage.xaml
@@ -19,12 +19,12 @@
                     <ffimageloading:CachedImage Aspect="AspectFit"
                                                 Source="{Binding Image}" 
                                                 CacheDuration= "50"
-                                                HeightRequest="150"
+                                                HeightRequest="300"
                                                 Margin="5"
                                                 RetryCount= "3"
                                                 RetryDelay= "600">
                         <ffimageloading:CachedImage.Transformations>
-                            <fftransformations:CircleTransformation />
+                            <fftransformations:CropTransformation />
                         </ffimageloading:CachedImage.Transformations>
                         <ffimageloading:CachedImage.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding ChangeImageCommand}"/>
