--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/DeleteTripPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/DeleteTripPage.xaml
@@ -43,6 +43,7 @@
                     <Entry Grid.Column="1"
                 	       Grid.Row="1"
                 	       Placeholder="email"
+                           Keyboard="Email"
                            Text="{Binding Email}"/>
                     
                 </Grid>
